<resources>
    <string name="app_name">PopularMoviesMvp</string>
    <string name="sort_popular">Sort by popular movies</string>
    <string name="sorted_popular">Popular movies</string>
    <string name="sort_top">Sort by top rated movies</string>
    <string name="sorted_top">Top rated movies</string>
    <string name="movie_title_description">movie title</string>
    <string name="movie_data_background">movie title and date background</string>
    <string name="movie_image_description">movie image</string>
    <string name="video_image_description">movie image</string>
    <string name="dummy_date">2018</string>
    <string name="dummy_average">3.4</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere, velit sed dapibus blandit, est augue tincidunt erat, vel faucibus massa velit sed mi. Aenean a ex orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi egestas turpis et turpis egestas iaculis. Morbi pulvinar elit ac ipsum accumsan auctor. Donec auctor augue nec arcu tincidunt, sed dignissim ex sagittis. Curabitur libero dui, aliquam eget dictum scelerisque, vehicula et orci. Vestibulum non enim vitae felis semper commodo. </string>
    <string name="calendar_icon">calendar icon</string>
    <string name="no_api_key">Did you added your API KEY correctly?</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_reviews_videos">No internet connection to show reviews neither videos</string>
    <string name="retry">Retry again?</string>
    <string name="dummy_author">Author</string>
    <string name="dummy_review">This is the review text to show</string>
    <string name="review_label">Reviews</string>
    <string name="video_label">Videos</string>
    <string name="share_video">Share this video</string>
    <string name="video_message">Hey! check out this video!</string>
    <string name="favorite_image_description">favorite image button</string>
    <string name="no_favorite_movie">You dislike this movie</string>
    <string name="favorite_movie">You like this movie</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="sort_favorite_movies">Sort by favorite movies</string>
    <string name="favorite_movies_empty">You don\'t have any favorite movie</string>
    <string name="not_added_favorite_movies_error">That movie has not been added as favorite. Please, try again</string>
    <string name="not_removed_favorite_movies_error">That movie has not been removed from favorite list. Please, try again</string>
    <string name="failed_insert_row">Failed to insert row into %1$s</string>
    <string name="unknown_uri">Unknown uri: %1$s</string>
    <string name="no_implemented">Not yet implemented</string>
</resources>
