<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/black_gradient"
        android:contentDescription="@string/movie_data_background"
        app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_movie_title" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:textColor="@color/white"
        android:textSize="@dimen/small_info_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_date"
        app:layout_constraintLeft_toLeftOf="@+id/iv_movie_poster"
        app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
        tools:text="@string/movie_title_description" />

    <TextView
        android:id="@+id/tv_movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
        app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title"
        app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
        tools:text="@string/dummy_date" />

</android.support.constraint.ConstraintLayout>