<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_image_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/ic_launcher_background" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_movie_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:textSize="@dimen/info_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_text" />

            <ImageView
                android:id="@+id/iv_calendar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin"
                android:contentDescription="@string/calendar_icon"
                android:src="@android:drawable/ic_menu_my_calendar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_plot" />

            <TextView
                android:id="@+id/tv_movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:paddingTop="@dimen/default_margin"
                android:textSize="@dimen/info_size"
                app:layout_constraintBottom_toBottomOf="@id/iv_calendar_icon"
                app:layout_constraintLeft_toRightOf="@id/iv_calendar_icon"
                app:layout_constraintStart_toEndOf="@id/iv_calendar_icon"
                app:layout_constraintTop_toTopOf="@id/iv_calendar_icon"
                tools:text="@string/dummy_date" />

            <TextView
                android:id="@+id/tv_movie_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_calendar_icon"
                tools:text="@string/dummy_average" />

            <RatingBar
                android:id="@+id/rb_movie_average"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:isIndicator="true"
                android:numStars="@integer/max_movie_score"
                android:stepSize="@integer/increment_value"
                app:layout_constraintBottom_toBottomOf="@id/tv_movie_average"
                app:layout_constraintLeft_toRightOf="@id/tv_movie_average"
                app:layout_constraintStart_toEndOf="@id/tv_movie_average"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_average" />

            <TextView
                android:id="@+id/tv_video_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/video_label"
                android:textSize="@dimen/info_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_average" />

            <ProgressBar
                android:id="@+id/pb_movie_videos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_video_label"
                app:layout_constraintLeft_toRightOf="@id/tv_video_label"
                app:layout_constraintStart_toEndOf="@+id/tv_video_label"
                app:layout_constraintTop_toTopOf="@id/tv_video_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_video_label" />

            <TextView
                android:id="@+id/tv_reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:paddingBottom="@dimen/default_margin"
                android:text="@string/review_label"
                android:textSize="@dimen/info_size"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_movie_videos" />

            <ProgressBar
                android:id="@+id/pb_movie_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_reviews_label"
                app:layout_constraintLeft_toRightOf="@id/tv_reviews_label"
                app:layout_constraintStart_toEndOf="@+id/tv_reviews_label"
                app:layout_constraintTop_toTopOf="@id/tv_reviews_label" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

            <TextView
                android:id="@+id/tv_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/no_reviews_videos"
                android:textAlignment="center"
                android:textSize="@dimen/info_size"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_average" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_no_internet" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>